--- a/.storybook/preview-body.html
+++ b/.storybook/preview-body.html
@@ -11,3 +11,9 @@
         text-decoration: none;
     }
 </style>
+<link
+        rel="stylesheet"
+        href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
+        integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk"
+        crossOrigin="anonymous"
+/>
